[package]
name = "ceres-cli"
version = "0.1.0"
edition = "2018"
authors = [
  "Patract <hi@patract.io>",
  "clearloop <udtrokia@gmail.com>"
]
description = "Run ink! contract in command line!"
repository = "https://github.com/patractlabs/ceres"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]


[[bin]]
name = "ceres"
path = "bin/ceres.rs"

[patch.crates-io]
parity-wasm = { git = "https://github.com/patractlabs/parity-wasm", branch = "v0.41.0" }

[dependencies]
etc = "0.1.16"
hex = "0.4.3"
dirs = "3.0.1"
sled = "0.34.6"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0.24"
structopt = "0.3.21"

# ceres deps
ceres-std = { path = "crates/std", version = "^0" }
ceres-runtime = { path = "crates/runtime", version = "^0" }
ceres-sandbox = { path = "crates/sandbox", version = "^0" }


[dev-dependencies]
parity-wasm = "0.41.0"
serde_json = "1.0.64"
wat = "1.0.37"
parity-scale-codec = "2"

# ceres dev
ceres-executor = { path = "crates/executor", version = "^0" }
ceres-seal = { path = "crates/seal", version = "^0" }
ceres-ri = { path = "crates/ri", version = "^0" }


[features]
default = [ "wasmtime" ]
wasmtime = [
    "ceres-std/std",
    "ceres-runtime/std",
    "ceres-sandbox/std",
    "ceres-executor/std",
    "ceres-seal/std",
    "ceres-ri/std",
]

[workspace]
members = [
  "browser",
  "crates/ri",
  "crates/std",
  "crates/seal",
  "crates/derive",
  "crates/sandbox",
  "crates/runtime",
  "crates/executor"
]

[profile.release]
codegen-units=1
opt-level = "s"
