[patch.crates-io]
parity-wasm = { git = "https://github.com/patractlabs/parity-wasm", branch = "v0.41.0" }

[workspace]
members = [
  "cli",
  "tests",
  "browser",
  "crates/ri",
  "crates/std",
  "crates/seal",
  "crates/derive",
  "crates/support",
  "crates/sandbox",
  "crates/runtime",
  "crates/executor",
]
exclude = [
  "contracts/args",
]

[profile.release]
codegen-units=1
opt-level = "s"
