[package]
name = "inkpad-browser"
version = "0.1.0"
edition = "2021"
authors = [
  "clearloop <udtrokia@gmail.com>"
]
description = "Run ink! contract in browser!"
repository = "https://github.com/clearloop/inkpad"
license = "Apache-2.0"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.51"
features = [
  "Storage",
  "Window"
]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = "0.4.5"

# interfaces
blake2-rfc = "0.2.18"
getrandom = { version = "0.2.3", features = ["js"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sha2 = { version = "0.9.3", features = [] }
snafu = "0.6.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["alloc"] }
hex = { version = "0.4", features = ["alloc"] }
parity-scale-codec = { version = "2.1.3", features = [] }

# inkpad deps
inkpad-std = { path = "../crates/std", version = "^0" }
inkpad-runtime = { path = "../crates/runtime", version = "^0" }
inkpad-support = { path = "../crates/support", version = "^0" }
inkpad-sandbox = { path = "../crates/sandbox", version = "^0" }
inkpad-executor = { path = "../crates/executor", version = "^0" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false