[package]
name = "ceres-cli"
version = "0.1.0"
edition = "2018"
authors = [
  "Patract <hi@patract.io>",
  "clearloop <udtrokia@gmail.com>"
]
description = "Run ink! contract in command line!"
repository = "https://github.com/patractlabs/ceres"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[[bin]]
name = "ceres"
path = "bin/ceres.rs"

[dependencies]
etc = "0.1.16"
hex = "0.4.3"
dirs = "3.0.1"
sled = "0.34.6"
structopt = "0.3.21"
thiserror = "1.0.24"
parity-scale-codec = { version = "2", features = ["derive"] }

# ceres deps
ceres-ri = { path = "../crates/ri", version = "^0" }
ceres-std = { path = "../crates/std", version = "^0" }
ceres-runtime = { path = "../crates/runtime", version = "^0" }
ceres-sandbox = { path = "../crates/sandbox", version = "^0" }
ceres-support = { path = "../crates/support", version = "^0" }
ceres-executor = { path = "../crates/executor", version = "^0" }

[features]
default = [ ]
wasmtime = [
    "ceres-std/std",
    "ceres-runtime/std",
    "ceres-sandbox/std",
    "ceres-support/std",
    "ceres-executor/std",
    "ceres-ri/std",
]
