[package]
name = "inkpad-cli"
version = "0.2.0"
edition = "2018"
authors = [
  "Patract <hi@patract.io>",
  "clearloop <udtrokia@gmail.com>"
]
description = "Run ink! contract in command line!"
repository = "https://github.com/patractlabs/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[[bin]]
name = "inkpad"
path = "bin/inkpad.rs"

[dependencies]
log = "0.4.14"
etc = "0.1.16"
hex = "0.4.3"
dirs = "3.0.1"
sled = "0.34.6"
structopt = "0.3.21"
thiserror = "1.0.24"
env_logger = "0.8.4"
parity-scale-codec = { version = "2", features = ["derive"] }

# inkpad deps
inkpad-ri = { path = "../crates/ri", version = "^0" }
inkpad-std = { path = "../crates/std", version = "^0" }
inkpad-runtime = { path = "../crates/runtime", version = "^0" }
inkpad-sandbox = { path = "../crates/sandbox", version = "^0" }
inkpad-support = { path = "../crates/support", version = "^0" }
inkpad-executor = { path = "../crates/executor", version = "^0" }

[features]
default = [ ]
wasmtime = [
    "inkpad-std/std",
    "inkpad-runtime/std",
    "inkpad-sandbox/std",
    "inkpad-support/std",
    "inkpad-executor/std",
    "inkpad-ri/std",
]
