[package]
name = "inkpad-cli"
version = "0.1.0"
edition = "2021"
authors = [
  "clearloop <udtrokia@gmail.com>"
]
description = "Run ink! contract in command line!"
repository = "https://github.com/patractlabs/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[[bin]]
name = "inkpad"
path = "bin/inkpad.rs"

[dependencies]
log = "0.4.14"
etc = "0.1.16"
hex = "0.4.3"
dirs = "3.0.1"
sled = "0.34.6"
structopt = "0.3.21"
thiserror = "1.0.24"
env_logger = "0.8.4"
parity-scale-codec = { version = "2", features = ["derive"] }

# inkpad deps
inkpad-ri = { path = "../crates/ri" }
inkpad-std = { path = "../crates/std" }
inkpad-runtime = { path = "../crates/runtime" }
inkpad-sandbox = { path = "../crates/sandbox" }
inkpad-support = { path = "../crates/support" }
inkpad-executor = { path = "../crates/executor" }

[features]
default = [ ]
wasmtime = [
    "inkpad-std/std",
    "inkpad-runtime/std",
    "inkpad-sandbox/std",
    "inkpad-support/std",
    "inkpad-executor/std",
    "inkpad-ri/std",
]
