[package]
name = "ceres"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract-metadata = "0.2.0"
pwasm-utils = "0.17.0"
structopt = "0.3.21"
wasmtime = "0.24.0"