[package]
name = "ceres_proxy"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
dirs = "3.0.1"
env_logger = "0.8.3"
juniper = "0.15.3"
juniper_actix = "0.2.3"
log = "0.4.14"
sled = "0.34.6"
structopt = "0.3.21"
substrate-subxt = "0.14.0"
thiserror = "1.0.24"