[package]
name = "ceres_proxy"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"]}
actix-web = "3.3.2"
actix-cors = "0.5.4"
contract-metadata = "0.2.0"
dirs = "3.0.1"
env_logger = "0.8.3"
juniper = "0.15.3"
juniper_actix = "0.2.3"
log = "0.4.14"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
serde = "1.0.124"
serde_json = "1.0.64"
semver = "0.9.0"
sled = "0.34.6"
sp-core = "3.0.0"
sp-runtime = "3.0.0"
sp-keyring = "3.0.0"
substrate-subxt = { git = "https://github.com/paritytech/substrate-subxt.git" }
thiserror = "1.0.24"
