[package]
name = "ceres_runtime_interfaces"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

[dependencies]
blake2-rfc = "0.2.18"
rand = "0.8.0"
sha2 = "0.9.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ceres-std = { path = "../std" }
ceres-seal = { path = "../seal" }
ceres-executor = { path = "../executor" }
ceres-sandbox = { path = "../sandbox" }

[features]
default = []
std = [
  "ceres-seal/std",
  "ceres-sandbox/std",
  "ceres-executor/std"
]
