[package]
name = "ceres-runtime"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

[dependencies]
hashbrown = "0.11.1"
hex = "0.4.3"
parity-scale-codec = "2.0.1"
parity-wasm = "0.41.0"
serde_json = "1.0.64"
serde = { version = "1.0.125", features = ["derive"] }
snafu = "0.6.10"
wasmi = { git = "https://github.com/patractlabs/wasmi.git", branch = "v0.7.0" }

# ceres dependencies
ceres-std = { path = "../std" }
ceres-seal = { path = "../seal" }
ceres-sandbox = { path = "../sandbox" }
ceres-executor = { path = "../executor" }

[features]
default = []
std = [
    "ceres-std/std",
    "ceres-seal/std",
    "ceres-sandbox/std",
    "ceres-executor/std",
]
