[package]
name = "ceres-sandbox"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2", features = ["derive"]}

ceres-std = { path = "../std" }
ceres-executor = { path = "../executor" }


[features]
default = []
std = [
    "ceres-std/std",
    "ceres-executor/std",
]