[package]
name = "ceres-tests"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

[lib]
name = "tests"
path = "lib.rs"

[dependencies]
env_logger = "0.8.4"
parity-wasm = "0.41.0"
parity-scale-codec = "2"
serde_json = "1.0.64"
wat = "1.0.37"

# ceres dev
ceres-ri = { path = "../crates/ri", version = "^0" }
ceres-std = { path = "../crates/std", version = "^0" }
ceres-seal = { path = "../crates/seal", version = "^0" }
ceres-runtime = { path = "../crates/runtime", version = "^0" }
ceres-sandbox = { path = "../crates/sandbox", version = "^0" }
ceres-support = { path = "../crates/support", version = "^0" }
ceres-executor = { path = "../crates/executor", version = "^0" }

[features]
default = [ ]
wasmtime = [
    "ceres-std/std",
    "ceres-runtime/std",
    "ceres-sandbox/std",
    "ceres-support/std",
    "ceres-executor/std",
    "ceres-ri/std",
]
