[package]
name = "inkpad-tests"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

[lib]
name = "tests"
path = "lib.rs"

[dependencies]
hex = "0.4.3"
wat = "1.0.37"
log = "0.4.14"
env_logger = "0.8.4"
serde_json = "1.0.64"
parity-wasm = "0.41.0"
parity-scale-codec = "2"

# inkpad dev
inkpad-ri = { path = "../crates/ri", version = "^0" }
inkpad-std = { path = "../crates/std", version = "^0" }
inkpad-seal = { path = "../crates/seal", version = "^0" }
inkpad-runtime = { path = "../crates/runtime", version = "^0" }
inkpad-sandbox = { path = "../crates/sandbox", version = "^0" }
inkpad-support = { path = "../crates/support", version = "^0" }
inkpad-executor = { path = "../crates/executor", version = "^0" }

[features]
default = [ ]
wasmtime = [
    "inkpad-std/std",
    "inkpad-runtime/std",
    "inkpad-sandbox/std",
    "inkpad-support/std",
    "inkpad-executor/std",
    "inkpad-ri/std",
]
