[package]
name = "ceres-browser"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.51"
features = [
  "Storage",
  "Window"
]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = "0.4.5"

# interfaces
blake2-rfc = "0.2.18"
rand = { version = "0.8.0", features = [ "alloc" ] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sha2 = { version = "0.9.3", features = [] }
snafu = "0.6.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["alloc"] }
hex = { version = "0.4", features = ["alloc"] }

# ceres deps
ceres-std = { path = "../std", version = "^0" }
ceres-seal = { path = "../seal", version = "^0" }
ceres-executor = { path = "../executor", version = "^0" }
ceres-sandbox = { path = "../sandbox", version = "^0" }
ceres-runtime = { path = "../runtime", version = "^0" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
