[package]
name = "inkpad-derive"
version = "0.2.0"
edition = "2018"
authors = [
  "Patract <hi@patract.io>",
  "clearloop <udtrokia@gmail.com>"
]
description = "derive macros for inkpad"

repository = "https://github.com/patractlabs/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
