[package]
name = "inkpad-executor"
version = "0.2.0"
edition = "2018"
authors = [
  "Patract <hi@patract.io>",
  "clearloop <udtrokia@gmail.com>"
]
description = "wasm executor of inkpad"
repository = "https://github.com/patractlabs/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[dependencies]
log = "0.4.14"
bitflags = "1.2.1"
parity-scale-codec = { version = "2", features = ["derive"] }
parity-wasm = "0.42.2"
hex = { version = "0.4.3", features = ["alloc"], optional = true }
wasmi = { package = "patract-wasmi", optional = true, version = "^0" }
wasmtime = { version = "0.26.1", optional = true }
anyhow = { version = "1", default-features = false }

# inkpad dependencies
inkpad-std = { path = "../std", version = "^0" }
inkpad-support = { path = "../support", version = "^0" }

[features]
default = [ "wasmi" ]
std = [
    "hex",
    "wasmtime",
    "inkpad-std/std" ,
]
