[package]
name = "inkpad-ri"
version = "0.1.0"
edition = "2021"
authors = [
  "clearloop <udtrokia@gmail.com>"
]
description = "inkpad runtime interfaces"
repository = "https://github.com/clearloop/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[dependencies]
blake2-rfc = "0.2.18"
rand = "0.8.0"
sha2 = "0.9.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

# inkpad dependencies
inkpad-std = { path = "../std", version = "^0" }
inkpad-seal = { path = "../seal", version = "^0" }
inkpad-executor = { path = "../executor", version = "^0" }
inkpad-sandbox = { path = "../sandbox", version = "^0" }

[features]
default = []
std = [
  "inkpad-seal/std",
  "inkpad-sandbox/std",
  "inkpad-executor/std"
]
