[package]
name = "ceres-runtime"
version = "0.1.0"
edition = "2018"
authors = [
  "Patract <hi@patract.io>",
  "clearloop <udtrokia@gmail.com>"
]
description = "Runtime ink! contract anywhere!"
repository = "https://github.com/patractlabs/ceres"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
cfg-if = "1"
serde_json = "1.0.64"
parity-wasm = "0.41.0"
serde = { version = "1.0.125", features = ["derive"] }
derivative = { version = "2.2.0", features = ["use_core"] }
parity-scale-codec = { version = "2", features = ["derive"] }

# ceres dependencies
ceres-ri = {path = "../ri", version = "^0", optional = true }
ceres-std = { path = "../std", version = "^0" }
ceres-seal = { path = "../seal", version = "^0" }
ceres-sandbox = { path = "../sandbox", version = "^0" }
ceres-support = { path = "../support", version = "^0" }
ceres-executor = { path = "../executor", version = "^0" }

[features]
default = []
std = [
    "ceres-ri/std",
    "ceres-std/std",
    "ceres-seal/std",
    "ceres-sandbox/std",
    "ceres-support/std",
    "ceres-executor/std",
]
