[package]
name = "inkpad-runtime"
version = "0.2.0"
edition = "2018"
authors = [
  "Patract <hi@patract.io>",
  "clearloop <udtrokia@gmail.com>"
]
description = "Runtime ink! contract anywhere!"
repository = "https://github.com/patractlabs/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
cfg-if = "1"
serde_json = "1.0.64"
parity-wasm = "0.42.2"
serde = { version = "1.0.125", features = ["derive"] }
derivative = { version = "2.2.0", features = ["use_core"] }
parity-scale-codec = { version = "2", features = ["derive"] }

# inkpad dependencies
inkpad-ri = {path = "../ri", version = "^0", optional = true }
inkpad-std = { path = "../std", version = "^0" }
inkpad-seal = { path = "../seal", version = "^0" }
inkpad-sandbox = { path = "../sandbox", version = "^0" }
inkpad-support = { path = "../support", version = "^0" }
inkpad-executor = { path = "../executor", version = "^0" }

[features]
default = []
std = [
    "inkpad-ri/std",
    "inkpad-std/std",
    "inkpad-seal/std",
    "inkpad-sandbox/std",
    "inkpad-support/std",
    "inkpad-executor/std",
]
