[package]
name = "inkpad-runtime"
version = "0.1.0"
edition = "2021"
authors = [
  "clearloop <udtrokia@gmail.com>"
]
description = "Runtime ink! contract anywhere!"
repository = "https://github.com/clearloop/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
cfg-if = "1"
serde_json = "1.0.64"
parity-wasm = "0.42.2"
serde = { version = "1.0.125", features = ["derive"] }
derivative = { version = "2.2.0", features = ["use_core"] }
parity-scale-codec = { version = "2", features = ["derive"] }

# inkpad dependencies
inkpad-ri = {path = "../ri", optional = true }
inkpad-std = { path = "../std" }
inkpad-seal = { path = "../seal" }
inkpad-sandbox = { path = "../sandbox" }
inkpad-support = { path = "../support" }
inkpad-executor = { path = "../executor" }

[features]
default = []
std = [
    "inkpad-ri/std",
    "inkpad-std/std",
    "inkpad-seal/std",
    "inkpad-sandbox/std",
    "inkpad-support/std",
    "inkpad-executor/std",
]
