[package]
name = "ceres-sandbox"
version = "0.1.0"
edition = "2018"
authors = [
  "Patract <hi@patract.io>",
  "clearloop <udtrokia@gmail.com>"
]
description = "sandbox of ceres"
repository = "https://github.com/patractlabs/ceres"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
parity-scale-codec = { version = "2", features = ["derive"]}

# ceres deps
ceres-std = { path = "../std", version = "^0" }
ceres-support = { path = "../support", version = "^0" }
ceres-executor = { path = "../executor", version = "^0" }


[features]
default = []
std = [
    "ceres-std/std",
    "ceres-executor/std",
    "ceres-support/std",
]