[package]
name = "inkpad-sandbox"
version = "0.2.0"
edition = "2021"
authors = [
  "clearloop <udtrokia@gmail.com>"
]
description = "sandbox of inkpad"
repository = "https://github.com/patractlabs/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[dependencies]
hex = "0.4.3"
log = "0.4.14"
parity-scale-codec = { version = "2", features = ["derive"]}
parity-wasm = "0.42.2"
libsecp256k1 = "0.7.0"

# inkpad deps
inkpad-std = { path = "../std" }
inkpad-support = { path = "../support" }
inkpad-executor = { path = "../executor" }


[features]
default = []
std = [
    "inkpad-std/std",
    "inkpad-executor/std",
    "inkpad-support/std",
]