[package]
name = "inkpad-seal"
version = "0.2.0"
edition = "2018"
authors = [
  "Patract <hi@patract.io>",
  "clearloop <udtrokia@gmail.com>"
]
description = "inkpad runtime interfaces"
repository = "https://github.com/patractlabs/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[dependencies]
log = "0.4.14"
inkpad-std = { path = "../std", version = "^0" }
inkpad-derive = { path = "../derive", version = "^0" }
inkpad-sandbox = { path = "../sandbox", version = "^0" }
inkpad-executor = { path = "../executor", version = "^0" }

parity-scale-codec = { version = "2", features = ["derive"]}

[features]
default = []
std = [
    "inkpad-std/std",
    "inkpad-sandbox/std",
    "inkpad-executor/std",
]
