[package]
name = "inkpad-seal"
version = "0.1.0"
edition = "2021"
authors = [
  "clearloop <udtrokia@gmail.com>"
]
description = "inkpad runtime interfaces"
repository = "https://github.com/patractlabs/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[dependencies]
log = "0.4.14"
inkpad-std = { path = "../std" }
inkpad-derive = { path = "../derive" }
inkpad-sandbox = { path = "../sandbox" }
inkpad-executor = { path = "../executor" }

parity-scale-codec = { version = "2", features = ["derive"]}

[features]
default = []
std = [
    "inkpad-std/std",
    "inkpad-sandbox/std",
    "inkpad-executor/std",
]
