[package]
edition = "2018"
name = "ceres-std"
version = "0.2.0"
authors = [
  "Patract <hi@patract.io>",
  "clearloop <udtrokia@gmail.com>"
]
description = "std bound for ceres"
repository = "https://github.com/patractlabs/ceres"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[features]
default = []
std = []
