[package]
edition = "2018"
name = "inkpad-std"
version = "0.2.0"
authors = [
  "Patract <hi@patract.io>",
  "clearloop <udtrokia@gmail.com>"
]
description = "std bound for inkpad"
repository = "https://github.com/patractlabs/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[features]
default = []
std = []
