[package]
edition = "2021"
name = "inkpad-std"
version = "0.1.0"
authors = [
  "clearloop <udtrokia@gmail.com>"
]
description = "std bound for inkpad"
repository = "https://github.com/patractlabs/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[features]
default = []
std = []
