[package]
edition = "2021"
name = "inkpad-support"
version = "0.1.0"
authors = [
  "clearloop <udtrokia@gmail.com>"
]
description = "inkpad supports"
repository = "https://github.com/patractlabs/inkpad"
license = "MIT"
readme = './README.md'
keywords = ["wasm", "substrate", "runtime"]

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.125", features = ["derive"] }
derivative = { version = "2.2.0", features = ["use_core"] }
parity-wasm = "0.42.2"
parity-scale-codec = { version = "2", features = ["derive"] }
inkpad-std = { path = "../std", version = "^0" }

[features]
default = [ "std" ]
std = [
  "inkpad-std/std",
]
